Revision history for Git-Helpers

{{$NEXT}}
    - Adds a remote_url() helper.

0.000004  2016-04-11 21:57:50-04:00 America/Toronto
    - Replace has_git by test_requires_git (Philippe Bruhat (BooK))

0.000003  2015-04-20 04:35:06+02:00 Europe/Berlin
    - Fixes use of Test::Git

0.000002  2015-04-19 09:29:34+02:00 Europe/Berlin
    - Requires the (currently) latest version of Test::Git

0.000001  2015-04-18 15:00:31+02:00 Europe/Berlin
    - Initial release.