@@ -2,6 +2,7 @@ Revision history for Git-Helpers
 
 {{$NEXT}}
     - Adds a remote_url() helper.
+    - Adds a travis_url() helper.
 
 0.000004  2016-04-11 21:57:50-04:00 America/Toronto
     - Replace has_git by test_requires_git (Philippe Bruhat (BooK))
